test/test_bad/nomod.yang
not-module n { // error: invalid top element
}
